components/reviews/reviews.scss
.reviews {
  position: relative;
  width: 100%;
  height: 100%;
  flex: 1;
  &__bg {
    position: absolute;
    background-image: url(~/assets/imgs/reviews_bg.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    width: 100%;
    height: 0;
    top: 0;
    left: 0;
    padding-top: 62%;
    margin-top: -9%;
    z-index: -1;
  }
  &__wrapper {
    position: relative;
    display: flex;
    top: 0;
    left: 0;
    width: 100%;
    min-height: 100vh;
    align-items: center;
    z-index: 1;
  }
  &__content {
    padding-top: 30%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    // align-items: center;
    width: 100%;
    height: 100%;
  }
  &__header {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
  }
  &__title {
    position: relative;
    display: inline-block;
    font-size: 45px;
    font-family: 'ThamesC';
    font-style: italic;
    font-weight: normal;
    text-transform: uppercase;
    color: white;
    padding: 0 20px;
    padding-bottom: 10px;
    text-shadow: 0 0 5px rgba(0, 0, 0, .5);
    &--decorative {
      position: absolute;
      top: 0;
      left: 0;
      width: 8px;
      height: 100%;
    }
  }
  &__container {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: flex-start;
    background-color: white;
    padding: 1rem;
  }
  &__item {
    flex: 1 1 calc(33.33% - 2rem);
    min-width: 300px;
    margin: 1rem;
  }
  & .item {
    line-height: 1rem;
    &__title {
      font-family: Selina;
      font-size: 1rem;
      line-height: 1rem;
      text-transform: uppercase;
      font-style: italic;
    }
    &__header {
      margin-top: 1rem;
    }
    &__body {
      margin-top: 1rem;
    }
  }
}

/* Extra Large Devices, Wide Screens */
@media only screen and (max-width : 1600px) {
  .reviews {
    &__bg {
      position: absolute;
      background-image: url(~/assets/imgs/reviews_bg.jpg);
      background-size: cover;
      background-position: top center;
      background-repeat: no-repeat;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      padding-top: 02%;
      margin-top: 0;
    }
  }
}

/* Extra Large Devices, Wide Screens */
@media only screen and (max-width : 1600px) {
	.reviews {
	  &__content {
	    padding-top: 0;
	  }
	}
}

/* Large Devices, Wide Screens */
@media only screen and (max-width : 1200px) {

}

/* Medium Devices, Desktops */
@media only screen and (max-width : 992px) {

} 

/* Small Devices, Tablets */
@media only screen and (max-width : 768px) {
  .reviews {
    &__content {
      margin: 3rem 0;
    }
    &__item {
      min-width: initial;
    }
  }
}

/* Extra Small Devices, Phones */
@media only screen and (max-width : 480px) {

}

/* Custom, iPhone Retina */
@media only screen and (max-width : 320px) {

}

